# stm32_cubemx_encoder

./: .gitmodules  CMakeLists.txt
app/encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp
